--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <title>dtmoney</title>
   </head>
   <body>
+    <noscript>You need to enable Javascript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
